--- a/style.css
+++ b/style.css
@@ -69,3 +69,9 @@ h1 {
     background-color: blue;
     color: white;
 }
+
+@media (max-width: 775px) {
+    .calculadora {
+        margin: 10px;
+    }
+}
