--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 main {
@@ -65,6 +66,11 @@ h1 {
     font-weight: bold;
 }
 
+.btn_calcular:hover {
+    background-color: blue;
+    color: white;
+}
+
 .resultado {
     display: flex;
     flex-direction: column;
@@ -73,9 +79,26 @@ h1 {
     max-width: 400px;
 }
 
-.btn_calcular:hover {
-    background-color: blue;
-    color: white;
+h2 {
+    margin-bottom: 20px;
+}
+
+table {
+    display: flex;
+    justify-content: center;
+    border-collapse: collapse;
+    margin-bottom: 150px;
+    border-radius: 15px;
+    max-width: 400px;
+}
+
+td, th {
+    border: 1px solid rgb(189, 191, 198);
+    padding: 10px;
+}
+
+th {
+    background-color: rgb(210, 216, 230);
 }
 
 @media (max-width: 775px) {
