--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ table {
     border-collapse: collapse;
     margin-bottom: 150px;
     border-radius: 15px;
-    max-width: 400px;
+    width: 100%;
 }
 
 td, th {
