--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 main {
     display: flex;
     justify-content: center;
+    gap: 20px;
 }
 
 h1 {
@@ -72,7 +73,7 @@ h1 {
 }
 
 h2 {
-    margin: 100px 0px 5px 21px;
+    margin: 150px 0px 5px 21px;
 }
 
 table {
