--- a/style.css
+++ b/style.css
@@ -73,6 +73,8 @@ h1 {
 }
 
 .resultado {
+    display: flex;
+    justify-content: center;
     margin: 150px 20px 150px 20px;
     max-width: 400px;
 }
