--- a/style.css
+++ b/style.css
@@ -73,14 +73,15 @@ h1 {
 }
 
 .resultado {
+    overflow: inherit;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     margin: 150px 20px 150px 20px;
     max-width: 400px;
+    background-color: aqua;
 }
 
 table {
-    margin: 0px 20px 0px 20px;
     border-collapse: collapse;
     max-width: 400px;
 }
