--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h1 {
 }
 
 .resultado {
-    overflow: inherit;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     margin: 150px 20px 150px 20px;
