--- a/style.css
+++ b/style.css
@@ -73,7 +73,6 @@ h1 {
 }
 
 .resultado {
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     margin: 150px 20px 150px 20px;
@@ -83,10 +82,11 @@ h1 {
 
 table {
     border-collapse: collapse;
-    max-width: 400px;
+    width: 100%;
 }
 
 th, td {
+    font-size: small;
     border: 1px solid rgb(188, 191, 199);
 }
 
