--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+html, body {
+    scroll-behavior: smooth;
+}
+
 main {
     display: flex;
     justify-content: center;
@@ -73,7 +77,7 @@ h1 {
 }
 
 .resultado {
-    display: flex;
+    display: none;
     flex-direction: column;
     margin: 150px 20px 150px 20px;
     max-width: 400px;
